# Multi-Source-Signal-Aggregator-Agent

./: main.py  pyproject.toml
app/: state.py  workflow.py
app/agents/: data_agent.py  decision_agent.py  news_agent.py  sentiment_agent.py
frontend/: index.html
